--- a/paragraphs.html
+++ b/paragraphs.html
@@ -4,7 +4,7 @@
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <title>Paragraphs!</title>
   </head>
-  <body></body>
+  <body>
       <h1>Paragraphs of text</h1>
       <h2>Plus an intro at the top!</h2>
 
